# mcp-server-tochka-bank

./: CLAUDE.md  LICENSE  README.md  development.md  maintainer.md  pyproject.toml  server.json
.github/workflows/: test.yml
src/mcp_server_tochka_bank/: __init__.py  __main__.py  cli.py  goods.py  invoice_tracker.py  models.py  server.py  tochka_api.py
tests/: conftest.py  test_accounts.py  test_acquiring.py  test_balance.py  test_cli.py  test_consents.py  test_customers.py  test_goods.py  test_incoming.py  test_invoice.py  test_invoice_extras.py  test_invoice_tracker.py  test_payment.py  test_payments_list.py  test_search.py  test_subscriptions.py  test_upd.py
