[project]
name = "mcp-server-tochka-bank"
version = "0.2.0"
description = "MCP server for Tochka Bank API — balance, payments, invoices, UPD"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28",
]

[project.scripts]
mcp-server-tochka-bank = "mcp_server_tochka_bank:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_tochka_bank"]

[dependency-groups]
test = ["pytest>=8.0", "pytest-asyncio>=0.21", "anyio>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
